<resources>
    <string name="app_name">BCS_Guideline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">BCS GUIDELINE</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="sylhetbutton">Study</string>
    <string name="dhakabutton">Model test</string>
    <string name="khulnabutton">Books</string>
    <string name="mymensinghbutton">Viva Resourced</string>
    <string name="rajshahibutton">Group chat</string>
    <string name="rangpurbutton">Syllabus</string>
    <string name="barisalbutton">Previous Question</string>
    <string name="chittagongbutton">Guideline</string>

    <string name="action_about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Preliminary test Books</string>
    <string name="tab_text_2">Written books</string>
    <string name="tab_text_3">Bcs rules</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="write_somethings">Write somethings</string>

    <string-array name="sylhet_tourist_place">
        <item>গীতিকবি ও গীতিকাব্য</item>
        <item>পুঁথি সাহিত্য</item>
        <item>প্রাচীন সাহিত্যে ধারা</item>
        <item>প্রাচীন সাহিত্যের পৃষ্ঠপোষকগণ</item>
        <item>বাংলা সাহিত্যের প্রথম</item>
        <item>বাংলা সাহিত্যের ইতিহাস</item>
        <item>বিখ্যাত বাংলা উপন্যাস</item>
        <item>বৈষ্ণব পদাবলী</item>
        <item>মঙ্গলকাব্য</item>
        <item>মহাকবি ও মহাকাব্য</item>
        <item>লোক সাহিত্য</item>
        <item>সাহিত্যিকদের উপাধি/ছদ্মনাম</item>
        <item>কবি / সাহিত্যেকদের প্রথম গ্রন্থ</item>
    </string-array>


    <string name="question1">1)প্রশ্ন: গীতিকবি স্বর্ণকুমারী এর গীতিকাব্যের নাম কি কি ?</string>
    <string name="question2">উ: গাথা (১৮৮০), কবিতা ও গান (১৮৯৫)।</string>

    <string name="question3">2)প্রশ্ন: গীতিকবি বিহারীলাল চক্রবর্তী এর গীতিকাব্যের নাম কি কি ?</string>
    <string name="question4">উ: প্রেম প্রবাহিনী (১৮৭০), বঙ্গসুন্দরী (১৮৭০), নিসর্গ সন্দর্শন (১৮৭০), সারদা মঙ্গল (১৮৭৯)।</string>

    <string name="question5">3)প্রশ্ন: গীতিকবি সুরেন্দ্রনাথ মজুমদার এর গীতিকাব্যের নাম কি কি ?</string>
    <string name="question6">উ: মহিলাকাব্য (১৮৮০), সবিতা সুদর্শন (১৮৭০), বর্ষবর্তন (১৮৭২)।</string>

    <string name="question7">4)প্রশ্ন: গীতিকবি অক্ষয়কুমার বড়াল গীতিকাব্যের নাম কি কি ?</string>
    <string name="question8">উ: প্রদীপ (১৮৮৪), এষা (১৯১৯)</string>

    <string name="question9">5)প্রশ্ন: গীতিকবি দ্বিজেন্দ্রনাথ ঠাকুর গীতিকাব্যের নাম কি কি ?</string>
    <string name="question10">উ: স্বপ্নপয়ন (১৮৭৩)।</string>

    <string name="question11">6)প্রশ্ন: গীতিকবি কামিনী রায় গীতিকাব্যের নাম কি কি ?</string>
    <string name="question12">উ: আলো ও ছায়া (১৮৮৯), মাল্য ও নিমার্ল্য (১৯১৩), অশোক সঙ্গীত(১৯১৪), দীপ ও ধুপ (১৯২৯)।</string>

    <string name="question13">7)প্রশ্ন: গীতিকবি দ্বিজেন্দ্রলাল রায় গীতিকাব্যের নাম কি কি ?</string>
    <string name="question14">উ: আর্যগাথা (১৮৮২), আষাঢ়ে (১৮৯৯), ত্রিবেনী (১৯১২)।</string>

    <string name="question15">8)প্রশ্ন: গীতিকবি গোবিন্দ চন্দ্র দাস গীতিকাব্যের নাম কি কি ?</string>
    <string name="question16">উ: প্রসূন (১২৯৪), প্রেম ও ফুল (১২৯৪), কুমকুম (১২৯৮), ফুল রেণু (১৩০৩)।</string>

    <string name="question17">9)প্রশ্ন: গীতিকবি মোজাম্মেল হোসেন গীতিকাব্যের নাম কি কি ?</string>
    <string name="question18">উ: কুসুমাঞ্জলী (১৮৮২), প্রেমহার (১৮৯৮)।</string>

    <string name="question19">10)প্রশ্ন: গীতিকবি সৈয়দ এমদাদ আলী গীতিকাব্যের নাম কি কি ?</string>
    <string name="question20">উ: ডালি (১৯১২), হাজেরা (১৯১২)।</string>

    <string name="question21">11)প্রশ্ন: গীতিকবি রবীন্দ্রনাথ ঠাকুর গীতিকাব্যের নাম কি কি ?</string>
    <string name="question22">উ: ভানুসিংহের পদাবলী |</string>

    <string name="question23">12)প্রশ্ন: গীতিকবি রজনীকান্ত সেন গীতিকাব্যের নাম কি কি ?</string>
    <string name="question24">উ: বাণী (১৯০২), কল্যাণী (১৯০৫), অমৃত (১৯১০), আনন্দময়ী (১৯১০)।</string>

    <string name="question25">13)প্রশ্ন: গীতিকবি কায়কোবাদ গীতিকাব্যের নাম কি কি ?</string>
    <string name="question26">উ: অশ্রুমালা (১৮৯৫)।</string>

    <string name="question27">14)প্রশ্ন: গীতিকবি অক্ষয়কুমার বড়াল গীতিকাব্যের নাম কি কি ?</string>
    <string name="question28">উ: প্রদীপ, (১৮৮৪), এষা (১৯১৯)।</string>



    <string name="lalakhal">চা বাগানের দেশ সিলেটে ঘুরতে গেলে সবাই নজর থাকে কেবল শাহজালাল-শাহপরাণ এর মাজার দর্শণ, জাফলং আর মাধবকুন্ড বেড়ানো। জাফলং, মাধবকুন্ড ছাড়াও সিলেটের মাথা নষ্ট করার মত আরেকটি দর্শণীয় স্থান হচ্ছে লালাখাল। সিলেট জেলার জৈন্তাপুর উপজেলার সন্নিকটে অবস্থিত এই অসাধারন সুন্দর জায়গাটির কথা এখনও অনেকেই অজানা।

                স্বচ্চ নীল জল রাশি আর দুধারের অপরুপ সোন্দর্য, দীর্ঘ নৌ পথ ভ্রমনের সাধ যেকোন পর্যটকের কাছে এক দূর্লভ আর্কষণ। তেমনি এক নির্জন মনকাড়া স্থান লালাখাল। বাংলাদেশের সবোর্চ্চ বৃষ্ঠিপাতের স্থান এবং রাতের সৌন্দর্যে ভরপুর এই লালাখাল সিলেট জেলার জৈন্তাপুর উপজেলার সন্নিকটে অবস্থিত। সারি নদীর স্বচ্চ জলরাশির উপর দিয়ে নৌকা অথবা স্পীডবোটে করে আপনি যেতে পারেন লালাখালে। যাবার পথে আপনির দুচোখ সৌন্দর্য দেখতে দেখতে ক্লান্ত হয়ে যাবেন কিন্ত সৌন্দর্য শেষ হবে না। মূলত সারিঘাট থেকে রওনা দেবার কিছুক্ষণ পরেই আপনার চোখে পড়বে দূরে মেঘালয়ের নীল পাহাড়গুলো। পথেই হয়ত দেখা মিলবে মহিষের পালের একসাথে গলা অবধি পানিতে ডুবে সাঁতার কাটার দৃশ্য। যত সামনে এগুতে থাকবেন ততই যেন মনোমুগ্ধকর প্রকৃতি হাতছানি দিয়ে ডাকবে আপনাকে।

                ৪৫ মিনিট থেকে ১ ঘন্টার যাত্রা শেষে আপনি পৌছে যাবেন লালখাল চা বাগানের ফ্যাক্টরী ঘাটে। মুগ্ধ দৃষ্টিতে তাকিয়ে থাকবেন নদীর দিকে। কাঁচের মত স্বচ্ছ নীল পানির বুক ভেদ করে তাকিয়ে থাকে নদীর তলদেশ। ভারতের চেরাপুঞ্জির ঠিক নিচেই লালাখালের অবস্থান। চেরাপুঞ্জি পাহাড় থেকে উৎপন্ন এই নদী বাংলাদেশের মধ্যে দিয়ে প্রবাহিত হয়ে সৃষ্টি করেছে অনিন্দ সুন্দর প্রাকৃতিক মায়াজাল। এমন জায়গাটা দেখা না হলে সারাজীবনই আক্ষেপ থেকে যাবে। আক্ষেপ না রেখে ঘুরে আসুন লালাখাল থেকে। চাইলে লালাখালে পৌছে ঘুরে নিতে পারেন সেখানকার ছোট একটি টি-ফ্যাক্টরি।\n\n

                যাতায়াত :\n
                লালাখালে যেতে হলে সিলেটের শিশু পার্কের সামনে থেকে লেগুনা অথবা জাফলংয়ের বাসে চেপে সিলেট-তামাবিল সড়ক ধরে যেতে হবে সারিঘাট। সিলেট আর জাফলং মাঝামাঝি এ স্থানটির নাম সারিঘাট। আগেই বলা হয়েছে, যাওয়ার জন্য পথ দুটি সড়কপথ ও নৌপথ। সড়ক পথে যেতে চাইলে মাইক্রোবাস বা কার ভাড়া নিলে ভালো হয়। তা ছাড়া সিলেট শহর থেকে বাস, লেগুনায় সারিঘাট গিয়ে সিএনজিচালিত অটোরিকশা ভাড়া নিতে পারেন। নৌপথে যেতে চাইলে আগে সারিঘাট পর্যন্ত একই নিয়মে বাস, লেগুনায় গিয়ে নৌযান ভাড়া নিতে হবে। ফেরার পথে এখান থেকে বাসে কিংবা লেগুনায় আসতে পারবেন। রাত ৮টা নাগাদ যানবাহন পাওয়া যাবে।\n\n

                আবাসন :\n
                লালাখালে একমাত্র আবাসন ব্যবস্থা নাজিমগড় রিসোর্ট। আগে থেকে যোগাযোগ করে যাওয়া ভাল। নাহলে রিসোর্টে রুম নাও মিলতে পারে। তবে বেশিরভাগ মানুষই সিলেট শহরে থাকেন, সেখান থেকে দিনে দিনে বেড়িয়ে আসেন। সেক্ষেত্রে সন্ধ্যার মধ্যেই ফিরতি পথে রওনা দেয়া ভাল। কারণ সন্ধ্যার পর নৌকা পাওয়া যায় না।\n\n

                খরচ :\n
                সিলেট শহর থেকে শুধু লালাখালের জন্য মাইক্রোর ভাড়া দুই হাজার থেকে তিন হাজার টাকার মধ্যে হবে, গাড়ি নিলে ভাড়া এক হাজার ৫০০ থেকে দুই হাজার টাকার মধ্যে। সারা দিনের প্ল্যান হলে ভোরে সিলেট থেকে রওনা দিতে হবে। তা ছাড়া বাস কিংবা লেগুনায় ৪০ থেকে ৬০ টাকার মধ্যে সারিঘাট যেতে পারবেন। সেখানে ইঞ্জিনচালিত নৌকা ভাড়া ৮০০ থেকে এক হাজার ৫০০ টাকা আর স্পিডবোটে যেতে চাইলে ভাড়া এক হাজার ৫০০ থেকে দুই হাজার টাকা হতে পারে। নৌযানে কমপক্ষে ১৫ থেকে ২০ জনের বসার ব্যবস্থা আছে, ভাড়া একই।\n\n

                যা অবশ্যই করবেন না-\n
                ১। দল থেকে বিচ্ছিন্ন হয়ে যাবেন না\n
                ২। সন্ধ্যার পর নির্জন এলাকায় একা একা ঘুরবেন না\n
                ৩। শিশুরা থাকলে পানিতে না নামতে দেয়াই ভাল \n
                ৪। সিগারেটের প্যাকেট, চিপসের প্যাকেট বা এ জাতীয় কোন বস্তু যেখানে সেখানে ফেলবেন না।\n\n

                পরিশেষে, সৌন্দর্য মনকে বড় করে। তাই যত পারা যায় সৌন্দর্যের কাছে যাওয়া উচিৎ আমাদের সকলের। কিন্তু সেই সৌন্দর্য রক্ষার দায়িত্বও আমাদের। পরিবেশকে পরিচ্ছন্ন রাখুন। প্রকৃতির কাছে গিয়ে হইচই, জোরে গান বাজানো থেকে বিরত থাকুন। নিজেও উপভোগ করুন, অন্যকেও উপভোগ করতে দিন অপার নিরবতা।
    </string>
    <string name="lalakhal1">লালাখাল</string>

</resources>
